<resources>
    <string name="app_name">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_bmi">BMI</string>
    <string name="title_diet">Diet</string>
    <string name="callculate_bmi">Callculate</string>
    <string name="weight_title">Weight</string>
    <string name="weight_hint">Enter your weight</string>
    <string name="height_title">Height</string>
    <string name="height_hint">Enter your height</string>
    <string name="age_title">Age</string>
    <string name="age_hint">Enter your age</string>
    <string name="bmi_title">Your Bmi</string>
    <string name="ppm_title">Your PPM</string>
    <string name="gender_title">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="ppm_default">Calculate your PPM to see diet.</string>
    <string name="welcome">Welcome</string>
    <string name="bmi_underweight">Underweight</string>
    <string name="bmi_normalweight">Normalweight</string>
    <string name="bmi_overweight">Overweight</string>
    <string name="bmi_obese">Obese</string>
    <string name="very_low_diet">Very low kcal diet</string>
    <string name="low_diet">Low kcal diet</string>
    <string name="normal_diet">Normal kcal diet</string>
    <string name="high_diet">High kcal diet</string>
    <string name="score">Score:</string>
    <string name="rerun">Rerun</string>
    <string name="exit_quiz">Exit</string>
    <string name="win_quiz">Congratulations! You have completed the course with the maximum number of points.</string>
    <string name="lose_quiz">Oops, you made a mistake! Your number of points is:</string>
    <string name="start_quiz">Start quiz</string>
    <string name="chart">Your weight chart</string>
    <string name="back">Back</string>
</resources>
